--- a/src/index.css
+++ b/src/index.css
@@ -28,17 +28,49 @@ ul {
   align-items: center;
 }
 
+/* Forms */
+.apply-job-form {
+  width: 60%;
+  margin: auto;
+  padding: 1.2rem;
+  border-radius: 0.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 0.25rem;
+}
+.form-control {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  gap: 0.25rem;
+  border: 1px solid rebeccapurple;
+}
+.form-control > input {
+  display: inline-block;
+  width: 100%;
+  padding: 0.25rem 0.5rem;
+  font-size: 1rem;
+  border: 1px solid #ccc;
+  outline: none;
+}
 .job-list-container {
   width: 100%;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  /* grid-template-columns: repeat(3, 1fr);
   justify-items: center;
-  align-items: start;
+  align-items: start; */
   gap: 0.75rem;
+  overflow-x: scroll;
 }
 
 .job-card {
-  width: 100%;
+  width: 25%;
   padding: 0.5rem;
   border-radius: 0.25rem;
   box-shadow: 1px 2px #444;
@@ -46,4 +78,15 @@ ul {
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
+}
+.description {
+  width: 100%;
+}
+
+.description div {
+  width: 100%;
+}
+.job-card > img {
+  width: 100%;
+  max-width: 100%;
 }
